force-app/main/default/objects/NineDocs__DocumentActivity__c/NineDocs__DocumentActivity__c.object-meta.xml
<CustomObject>
    <description>Represents a file/generated document that a user has generated and attached to a parent and sub-parent object.</description>
    <label>Document Activity</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Document Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>