force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Activities (AccountId)</relationshipLabel>
    <relationshipName>Document_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>