force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContractId</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Document Activities</relationshipLabel>
    <relationshipName>Document_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>