force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__AccountId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Documents</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>