force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__CaseId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseId</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Document Activities</relationshipLabel>
    <relationshipName>Document_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>