force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__ContactId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>