force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__DocumentId__c</fullName>
    <label>Document</label>
    <referenceTo>NineDocs__Document__c</referenceTo>
    <relationshipName>Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>