force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__DocumentType__c</fullName>
    <formula>TEXT(NineDocs__DocumentId__r.NineDocs__TemplateId__r.NineDocs__DocumentType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>