force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__GeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__GeneratedDate__c</fullName>
    <formula>NineDocs__DocumentId__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Generated Date</label>
    <type>DateTime</type>
</CustomField>