force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__LeadId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Document Activities</relationshipLabel>
    <relationshipName>Document_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>