force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Document Activities</relationshipLabel>
    <relationshipName>Document_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>