force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>NineDocs__Template__c</referenceTo>
    <relationshipLabel>Document Activities</relationshipLabel>
    <relationshipName>DocumentActivities</relationshipName>
    <type>Lookup</type>
</CustomField>