force-app/main/default/objects/NineDocs__DocumentActivity__c/fields/NineDocs__View__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__View__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;NineDocs__DocumentId__r.NineDocs__AttachmentId__c,&quot;view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>