force-app/main/default/objects/NineDocs__DocumentActivity__c/listViews/NineDocs__All.listView-meta.xml
<ListView>
    <fullName>NineDocs__All</fullName>
    <columns>NAME</columns>
    <columns>NineDocs__DocumentId__c</columns>
    <columns>NineDocs__GeneratedDate__c</columns>
    <columns>NineDocs__DocumentType__c</columns>
    <columns>NineDocs__FileType__c</columns>
    <columns>NineDocs__TemplateId__c</columns>
    <columns>NineDocs__View__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>